# barebones

./: Cargo.toml  README.md  broken.toml  cargo-generate.toml  cleanup.rhai  setup.rhai
licenses/: apache.liquid  bsd2.liquid  bsd3.liquid  gpl.liquid  lgpl.liquid  mit.liquid  mozilla.liquid  unlicense.liquid
src/: main.rs
